tests/errors/factorial_negative.ki
discard import("math").factorial(-5)
